--- a/sass/modules/_counter-area.scss
+++ b/sass/modules/_counter-area.scss
@@ -367,6 +367,9 @@
         .book-appointment-btn{
             margin-right: 0;
             height: 100% !important;
+            .elementor-align-right{
+                text-align: start;
+            }
             @include md{
                 margin-right: 0;
             }
